# translate-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
lxmfy_translate_bot/: __init__.py  bot.py
